# RExHopper

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  MUJOCO_LOG.TXT  ODriveSetup.md  README.md  offsets.txt  params.yml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/config/: .zshrc  docker.zsh-theme
docs/: CodeExecution.md  Container.md  EnvSetup.md  GeneratingMJCFs.md  HWComputerSetup.md  ODriveSetup.md  TestingProtocol.md
hopper_can_interface/: CMakeLists.txt  package.xml
hopper_can_interface/include/hopper_can_interface/: BufferedCanMsg.h  BufferedDataArray.h  CanInterface.h  ODriveCan.h  ODrivePCAN.h  can_helpers.hpp  can_interface.h  libpcanfd.h  pcanfd.h
hopper_can_interface/src/: BufferedCanMsg.cpp  BufferedDataArray.cpp  CanInterface.cpp  ODriveCan.cpp  ODrivePCAN.cpp  can_interface.cpp  can_run_example.cpp
hopper_can_interface/test/: Benchmark.h  TestCanRead.cpp  TestCanWrite.cpp  TestODrive.cpp  test_hopper_can_interface.cpp
hopper_mpc/: CMakeLists.txt  package.xml
hopper_mpc/include/codegen/: DEL.h  Jac.h
hopper_mpc/include/hopper_mpc/: actuator.h  argparse.hpp  bezier.h  bezier_utils.h  bridge.h  bridge_gazebo.h  bridge_hardware.h  bridge_mujoco.h  bridge_mujoco_wrapper.h  bridge_raisim.h  ctrl.h  cx5.h  filter.h  gait.h  glfw3.h  kf.h  leg.h  lowpass.h  matplotlibcpp.h  mocap_node.h  model.h  mpc_osqp.h  observer.h  param.h  pid.h  plots.hpp  runner.h  rwa.h  state_machine.h  sub_cx5.h  sub_mocap.h  utils.h  utils.hpp  wt901.h
hopper_mpc/include/mujoco/: mjdata.h  mjexport.h  mjmodel.h  mjplugin.h  mjrender.h  mjtnum.h  mjui.h  mjvisualize.h  mjxmacro.h  mujoco.h
hopper_mpc/include/rot_conv/: rot_conv.h  rot_conv_extras.h  rot_conv_frames.h  rot_conv_impl.h
hopper_mpc/res/hopper_rev08/: Link 1.STL  hopper_rev08.csv  hopper_rev08.urdf  hopper_rev08.xml  hopper_rev08_mjcf.xml  hopper_rev08_mjcf_fixed.xml  hopper_rev08_obj.urdf  rw0.stl  rw1.STL
hopper_mpc/res/hopper_rev09/: Link 1.stl  hopper_rev09.csv  hopper_rev09.urdf  hopper_rev09_mjcf.xml  hopper_rev09_mjcf_fixed.xml  rw0.STL  rw1.stl  rwz.stl
hopper_mpc/res/hopper_rev10/: Link 1.stl  hopper_rev10.csv  hopper_rev10.urdf  hopper_rev10_data.xml  hopper_rev10_mjcf.xml  hopper_rev10_mjcf_fixed.xml  rw0.stl  rw1.stl  rwz.stl
hopper_mpc/src/: actuator.cpp  bezier_utils.cpp  bridge.cpp  bridge_gazebo.cpp  bridge_hardware.cpp  bridge_mujoco.cpp  bridge_mujoco_wrapper.c  bridge_mujoco_wrapper.cpp  bridge_raisim.cpp  ctrl.cpp  cx5.cpp  filter.cpp  gait.cpp  kf.cpp  leg.cpp  lowpass.cpp  main.cpp  mocap_node.cpp  mpc_osqp.cpp  observer.cpp  pid.cpp  plots.cpp  rot_conv.cpp  rot_conv_extras.cpp  runner.cpp  runner.cpp.orig  rwa.cpp  state_machine.cpp  sub_cx5.cpp  sub_mocap.cpp  utils.cpp  wt901.cpp
hopper_mpc/src/codegen/DEL/cpp/symforce/sym/: DEL.h
hopper_mpc/src/codegen/DEL/lcmtypes/: DEL.lcm
hopper_mpc/src/codegen/DEL/python/lcmtypes/sym/: _constants_t.py
hopper_mpc/src/codegen/ForwardKin/cpp/symforce/sym/: ForwardKin.h
hopper_mpc/src/codegen/Jac/cpp/lcmtypes/sym/: constants_t.hpp
hopper_mpc/src/codegen/Jac/cpp/symforce/sym/: Jac.h
hopper_mpc/test/: test_hopper_cx5.cpp  test_hopper_wt901.cpp
quaternion_test/: CMakeLists.txt  package.xml
quaternion_test/include/: utils.hpp
quaternion_test/src/: pub_quat.cpp  sub_cx5.cpp  utils.cpp
src/: main.cpp
src/hopper_mpc/src/: main.cpp
src/hopper_mpc/test/: test_hopper_mpc.cpp
