<?xml version="1.0"?>
<package format="2">
  <name>hopper_mpc</name>
  <version>0.0.0</version>
  <description>The hopper_mpc package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="bbokser@gmail.com">vscode</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

   

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_clang_tools</build_depend>
  <depend>hopper_can_interface</depend>
  <depend>rotconv</depend>

  <!-- <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
