<?xml version="1.0"?>
<package format="2">
  <name>quaternion_test</name>
  <version>0.0.0</version>
  <description>Publishes quaternion orientation data from Cx5 ahrs to be picked up by rviz for testing purposes</description>

  <maintainer email="bbokser@gmail.com">Ben Bokser</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <export>

  </export>
</package>
